--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -7,7 +7,11 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
 }
-.Render {
+textarea {
+  font-family: "Inter", sans-serif;
+}
+.Render,
+.contactme {
   margin-top: 2em;
   display: flex;
   flex-direction: column;
@@ -17,6 +21,18 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.contactme {
+  margin-top: 5em;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.form p {
+  font-size: 1.2rem;
+}
+
 header {
   width: 60%;
   display: flex;
@@ -106,9 +122,74 @@ main {
   width: 10.5em;
 }
 
+.fname label,
+.lname label,
+.form-email label {
+  display: block;
+  margin-bottom: 0.5em;
+}
+.form-message label {
+  display: block;
+  margin-bottom: 0em;
+}
+
+.fname input,
+.lname input {
+  width: 15em;
+}
+textarea {
+  resize: none;
+  max-width: 97.5%;
+  width: 97.5%;
+  height: 10.73em;
+}
+input,
+textarea {
+  padding: 0.5em 0.5em;
+  border-radius: 10px;
+  border: 1px solid #d0d5dd;
+  margin: 0;
+}
+.form-email input {
+  display: flex;
+  flex-direction: column;
+  max-width: 97.5%;
+  width: 97.5%;
+}
+::placeholder {
+  color: #667085;
+}
+.form-name {
+  display: flex;
+  justify-content: space-between;
+}
+.form-message {
+  display: block;
+}
+.form-email,
+.form-name {
+  margin-bottom: 2em;
+}
+.form-message,
+.check {
+  margin-bottom: 0.8em;
+}
+.check input {
+  margin-right: 1em;
+}
+
+.form button {
+  background-color: #1570ef;
+  border: #1570ef;
+  color: #fff;
+  padding: 0.8em;
+  margin-bottom: 0;
+  border-radius: 10px;
+  cursor: pointer;
+}
 @media (max-width: 519px) {
   html {
-    font-size: 12.8px;
+    font-size: 12.7px;
   }
   .Render {
     margin-top: 2em;
@@ -136,5 +217,45 @@ main {
   }
   .footer .ingressive {
     width: 8em;
+  }
+  .contactme {
+    margin-top: 1em;
+    width: 92%;
+    display: block;
+  }
+  .form {
+    width: 90%;
+  }
+  .form-name {
+    display: block;
+  }
+  textarea {
+    width: 30em;
+  }
+  .lname,
+  .fname {
+    margin-top: 1em;
+  }
+  .form-name input,
+  .form-email input,
+  .form-message input,
+  .check {
+    width: 97%;
+    max-width: 100vw;
+  }
+  .check {
+    width: 100%;
+  }
+  .check input {
+    margin-right: 0.4em;
+  }
+  .form button {
+    background-color: #1570ef;
+    border: #1570ef;
+    color: #fff;
+    padding: 0.8em;
+    margin-bottom: 1em;
+    border-radius: 10px;
+    cursor: pointer;
   }
 }
