--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -7,7 +7,8 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
 }
-textarea {
+textarea,
+input {
   font-family: "Inter", sans-serif;
 }
 .Render,
