style: added hover and focus state to form input and button

--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -10,6 +10,14 @@ body {
 textarea,
 input {
   font-family: "Inter", sans-serif;
+  color: #101828;
+}
+textarea:focus,
+input:focus,
+textarea:active,
+input:active {
+  outline: none;
+  border: 1px solid #84caff;
 }
 .Render,
 .contactme {
@@ -158,6 +166,7 @@ textarea {
   width: 97.5%;
 }
 ::placeholder {
+  font-size: 0.8em;
   color: #667085;
 }
 .form-name {
@@ -178,7 +187,16 @@ textarea {
 .check input {
   margin-right: 1em;
 }
-
+.check input:checked {
+  border: 1px solid #1570ef;
+}
+.check input:focus {
+  border: 1px solid #84caff;
+}
+.check input,
+.check label {
+  cursor: pointer;
+}
 .form button {
   background-color: #1570ef;
   border: #1570ef;
@@ -187,6 +205,15 @@ textarea {
   margin-bottom: 0;
   border-radius: 10px;
   cursor: pointer;
+  transition: 0.5s;
+}
+.form button:hover {
+  background-color: #175cd3;
+}
+.form button:focus {
+  outline: #1570ef;
+  box-shadow: 0px 0px 0px 4px #d1e9ff;
+  box-shadow: 0px 1px 2px 0px #1018280d;
 }
 @media (max-width: 519px) {
   html {
