--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -215,6 +215,14 @@ textarea {
   box-shadow: 0px 0px 0px 4px #d1e9ff;
   box-shadow: 0px 1px 2px 0px #1018280d;
 }
+@media (max-width: 800px) {
+  html {
+    font-size: 11.5px;
+  }
+  .share {
+    margin-left: 40em;
+  }
+}
 @media (max-width: 519px) {
   html {
     font-size: 12.7px;
